<resources>
    <string name="app_name">Planner</string>
    <string name="your_api_key">my_api_key</string>

    <string name="clear_list">Очистить список</string>
    <string name="clearSetting">Очистить данные о пароле</string>
    <string name="progress">Прогресс</string>
    <string name="clear_minutes">Очистить поле всего минут</string>
    <string name="save">Сохранить</string>
    <string name="events">События</string>
    <string name="tasks">Задачи</string>
    <string name="ideas">Идеи</string>
    <string name="all_tasks">Всего записей</string>
    <string name="complete_tasks">Завершённых задач</string>
    <string name="timing">Тайминг</string>
    <string name="all_records">Всего записей</string>
    <string name="all_minutes">Всего минут</string>
    <string name="meets">Встречи</string>
    <string name="personal">Персональные</string>
    <string name="home">Дом</string>
    <string name="work">Работа</string>
    <string name="privates">Приватные</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="are_you_sure">Вы уверены ?</string>
    <string name="complete_work">Завершить работу</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="clear_password">Очистить пароль</string>
    <string name="clear_minute">Очистить поле минут</string>
    <string name="data_about_minutes_clear">Данные о минутах очищены</string>
    <string name="record_idea">Введите суть идеи</string>
    <string name="record_description">Введите описание</string>
    <string name="event_calendar">События по календарю</string>
    <string name="done_tasks">Выполнение задач</string>
    <string name="fast_add_your_event"><![CDATA[Быстрое добавление ваших событий & быстрое переключения  между датами & просмотр недель]]></string>
    <string name="list_tasks_help_you">Cписок задач поможет вам наполнить ваш день и добиться цели</string>
    <string name="record_idea_simple">Запись идей</string>
    <string name="check_timing">Отслеживание тайминга</string>
    <string name="most_effect_idea">Самый эффективный способ перенести идеи, мысли и задачи, не теряя внимания</string>
    <string name="plus_you_kpd">Один из лучших способов повысить свой КПД</string>
    <string name="settings">Настройки</string>
    <string name="create_password">Создание пароля</string>
    <string name="create_question">Создание вопроса</string>
    <string name="create_question_answer">Создание ответа</string>
    <string name="qst_example">Какой твой любимый цвет ?</string>
    <string name="change_theme">Сменить тему</string>
    <string name="planner">Planner</string>
    <string name="add_event">Добавить событие</string>
    <string name="walk_dog">Выгулить собаку</string>
    <string name="begin">Начало</string>
    <string name="begin_time">Начало времени</string>
    <string name="end_time">Конец времени</string>
    <string name="delete">Удалено</string>
    <string name="empty">Пусто</string>
    <string name="stopwatch">Секундомер</string>
    <string name="go_count">Идёт отсчёт</string>
    <string name="need_all_fields">Необходимо заполнить все поля</string>
    <string name="try_color">Попробовать</string>
    <string name="done_t">Выполненные задачи</string>
    <string name="colunn_empty">Колонка пуста</string>
    <string name="write_idea">Записать идею</string>
    <string name="color">Цвет</string>
    <string name="camera">Камера</string>
    <string name="image">Картинка</string>
    <string name="timer">Таймер</string>
    <string name="what_are_doing">Что вы будете делать?</string>
    <string name="apply">Принять</string>
    <string name="time">Время</string>
    <string name="toStart">Начать</string>
    <string name="complete">Завершить</string>
    <string name="minutes_amount">Количество минут</string>
    <string name="data_of_password_delete">Данные о пароле удалены</string>
    <string name="choose_language">Выберите Язык…</string>
    <string name="change_language">Сменить язык</string>
    <string name="task">Задача</string>
    <string name="zero_minutes_pass">0 минут прошло</string>
    <string name="ready">Готовы ?</string>
    <string name="timer_dont_end">Таймер ещё не окончен</string>
    <string name="timer_end">Таймер закончил свою работу</string>
    <string name="minut">минут</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="select_time">Выберите время</string>
    <string name="re_enter">Введите заново</string>
    <string name="of_symbols">Введите пароль из 4 символов</string>
    <string name="do_not_match">Не совпадает</string>
    <string name="correct_password">Верный пароль</string>
    <string name="Wrong">Не правильно</string>
    <string name="plan_own_day">Распланируй свой день</string>
    <string name="choose_theme">\"Выберите тему… \"</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="to_delete">Удалить</string>
    <string name="color_dont_choosed">Цвет не выбран</string>
    <string name="share_app">Поделиться</string>
    <string name="achievement_app">Достижения</string>
    <string name="add_title">Введите текст</string>
    <string name="add_icon">Выберите картинку: </string>
    <string name="answer_qst">Ответьте на вопрос</string>
    <string name="add_password">Установите пароль</string>
    <string name="qst_not_found">Введите вопрос</string>
    <string name="answer_not_found">Введите ответ</string>
    <string name="create_secret_word">Создайте секретное слово</string>
    <string name="enter_secret_word">Введите секретное слово</string>
    <string name="invalid_entered">Не правильно введены данные</string>
    <string name="attention">Внимание!</string>
    <string name="task_dialog_message">Вы уверены, что хотите удалить?</string>
    <string name="Cancel">Отмена</string>
    <string name="choosed">Вы выбрали: </string>
    <string name="change_image_title">Поменять картинку и название категории</string>
    <string name="remove_category">Удалить категорию</string>
    <string name="what_to_do">Что бы вы хотели сделать?</string>
    <string name="help_idea_add">Для добавления новой идеи нажмите на +</string>
    <string name="help_calendar_add">Для добавления нового события нажмите на +</string>
    <string name="help_timing_add">Для добавления новой задачи нажмите на +</string>
    <string name="changing_theme">Смена темы</string>
    <string name="board_theme_desc">Вы можете выбрать тему здесь, нажатием на один из вариантов, или перейти в Настройки</string>
    <string name="are_you_sure_that">Вы действительно хотите удалить все записи?</string>
    <string name="fox">Лиса</string>
    <string name="deer">Лань</string>
    <string name="bull">Бык</string>
    <string name="dog">Собака</string>
    <string name="cat">Кошка</string>
    <string name="rat">Крыса</string>
    <string name="giraffe">Жираф</string>
    <string name="lion">Лев</string>
    <string name="zebra">Зебра</string>
    <string name="your_patronus">Ваш патронус - </string>
    <string name="lumos">люмос</string>
    <string name="choose_app">Выберите приложение</string>
    <string name="new_aim">пора ставить новые цели!</string>
    <string name="helper_dialog_text">Вы можете поменять название и картинку категории на долгое нажатие:</string>
    <string name="move_tasks">Вы можете поменять задачи местами</string>
    <string name="delete_task">Вы можете удалить ненужную задачу:</string>
    <string name="completed">выполненных</string>
    <string name="write_reviews">Написать отзыв</string>
    <string name="review_on_app">Отзыв на приложение Planner</string>
    <string name="hello">Здравствуйте </string>
    <string name="attaboy">Молодец </string>
    <string name="Persistent">Настойчивый </string>
    <string name="Overwhelming">Преодолеватель </string>
    <string name="crane">Журавль</string>
    <string name="hippo">Бегемот</string>
    <string name="patronum">Экспекто патронум</string>
    <string name="important_message">Важное сообщение!</string>
    <string name="you_got">\"You got the title: \"</string>
</resources>
