<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".achievement.AchievementActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/personal"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_view_personal"
            tools:listitem="@layout/item_achievement" />


        <TextView
            android:id="@+id/text_view_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/work"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_personal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_view_work"
            tools:listitem="@layout/item_achievement" />


        <TextView
            android:id="@+id/text_view_meet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/meets"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_work" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_meet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_view_meet"
            tools:listitem="@layout/item_achievement" />


        <TextView
            android:id="@+id/text_view_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/home"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_meet" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_view_home"
            tools:listitem="@layout/item_achievement" />


        <TextView
            android:id="@+id/text_view_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/done"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_home" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/text_view_done"
            tools:listitem="@layout/item_achievement" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
