<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royalEnd"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_diolg_container"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/todo_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_et">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_h_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/default_image"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/dialog_h_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextTitleQuick2"
            android:text="example"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/dialog_h_tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/todoAmountTextColor2"
            android:text="0"
            android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/dialog_et"
        android:layout_marginTop="20sp"
        android:hint="@string/add_title"
        android:textColorHint="@color/hint_color"
        style="@style/TextTitleQuick"
        android:inputType="textCapSentences"
        app:layout_constraintStart_toStartOf="@id/dialog_tv"
        app:layout_constraintEnd_toEndOf="@id/dialog_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="26"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextTitleQuick"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/add_icon"
        app:layout_constraintStart_toEndOf="@id/item_diolg_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_et"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/dialog_gv_container"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <GridView
            android:id="@+id/dialog_gridView"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="2dp"
            android:layout_gravity="center"
            android:columnWidth="50dp"
            android:numColumns="4"
            android:stretchMode="spacingWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_gv_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <Button
            android:id="@+id/dialog_btn_cancel"
            android:textColor="@color/myWhite"
            android:layout_margin="10dp"
            android:text="@string/Cancel"
            android:background="@drawable/bg_button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/dialog_btn_ok"
            android:textColor="@color/myWhite"
            android:layout_margin="10dp"
            android:text="ok"
            android:background="@drawable/bg_button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>